--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Iterators\Adapters\Base\BaseArrayIteratorAdapter%272.cs" />
     <Compile Include="Iterators\Adapters\Base\BaseArrayListIteratorAdapter.cs" />
     <Compile Include="Iterators\Adapters\Base\BaseCollectionIteratorAdapter%271.cs" />
+    <Compile Include="Iterators\Adapters\Base\BaseConcurrentDictionaryIteratorAdapter%272.cs" />
     <Compile Include="Iterators\Adapters\Base\BaseDictionaryIteratorAdapter%272.cs" />
     <Compile Include="Iterators\Adapters\Base\BaseListIteratorAdapter%271.cs" />
     <Compile Include="Iterators\Adapters\Base\BaseSortedListIteratorAdapter.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="Iterators\Adapters\Const\ArrayConstIteratorAdapter%272.cs" />
     <Compile Include="Iterators\Adapters\Const\ArrayListConstIteratorAdapter.cs" />
     <Compile Include="Iterators\Adapters\Const\CollectionConstIteratorAdapter%271.cs" />
+    <Compile Include="Iterators\Adapters\Const\ConcurrentDictionaryConstIteratorAdapter%272.cs" />
     <Compile Include="Iterators\Adapters\Const\DictionaryConstIteratorAdapter%272.cs" />
     <Compile Include="Iterators\Adapters\Const\ListConstIteratorAdapter%271.cs" />
     <Compile Include="Iterators\Adapters\Const\SortedListConstIteratorAdapter.cs" />
@@ -57,6 +59,7 @@
     <Compile Include="Iterators\Adapters\NotConst\ArrayIteratorAdapter%272.cs" />
     <Compile Include="Iterators\Adapters\NotConst\ArrayListIteratorAdapter.cs" />
     <Compile Include="Iterators\Adapters\NotConst\CollectionIteratorAdapter%271.cs" />
+    <Compile Include="Iterators\Adapters\NotConst\ConcurrentDictionaryIteratorAdapter%272.cs" />
     <Compile Include="Iterators\Adapters\NotConst\DictionaryIteratorAdapter%272.cs" />
     <Compile Include="Iterators\Adapters\NotConst\ListIteratorAdapter%271.cs" />
     <Compile Include="Iterators\Adapters\NotConst\SortedListIteratorAdapter.cs" />
