--- a/Source/Tests/Iterator.Performance.Tests/Iterator.Performance.Tests.csproj
+++ b/Source/Tests/Iterator.Performance.Tests/Iterator.Performance.Tests.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Const\Array_1_ConstIterator_Vs_Enumerator_Tests.cs" />
     <Compile Include="Const\Collection_1_ConstIterator_Vs_Enumerator_Tests.cs" />
     <Compile Include="Const\List_1_ConstIterator_Vs_Enumerator_Tests.cs" />
+    <Compile Include="Const\ReadOnlyCollection_1_ConstIterator_Vs_Enumerator_Tests.cs" />
     <Compile Include="Const\SortedList_ConstIterator_Vs_Enumerator_Tests.cs" />
     <Compile Include="NotConst\Array%271_Iterator_Vs_Enumerator_Tests.cs" />
     <Compile Include="NotConst\ArrayList_Iterator_Vs_Enumerator_Tests.cs" />
