--- a/Source/Tests/Iterator.Performance.Tests/Iterator.Performance.Tests.csproj
+++ b/Source/Tests/Iterator.Performance.Tests/Iterator.Performance.Tests.csproj
@@ -166,6 +166,7 @@
     <Compile Include="NotConst\ConcurrentDictionary_2_Iterator_Vs_Enumerator_Tests.cs" />
     <Compile Include="NotConst\Dictionary_2_Iterator_Vs_Enumerator_Tests.cs" />
     <Compile Include="NotConst\List_1_Iterator_Vs_Enumerator_Tests.cs" />
+    <Compile Include="Const\ReadOnlyDictionary_2_ConstIterator_Vs_Enumerator_Tests.cs" />
     <Compile Include="NotConst\SortedList_Iterator_Vs_Enumerator_Tests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
