--- a/Source/Lib/RangeIt/project.json
+++ b/Source/Lib/RangeIt/project.json
@@ -2,8 +2,7 @@
   "supports": {},
   "dependencies": {
     "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
-    "NETStandard.Library": "1.6.1",
-    "System.Collections.NonGeneric": "4.3.0"
+    "NETStandard.Library": "1.6.1"
   },
   "frameworks": {
     "netstandard1.3": {}
