--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,9 @@
 # configuration for "master" branch
 # build in Release mode
 -
+  environment:
+    packageVersion: 0.1.0
+
   version: '{branch}-v0.1.0-{build}'
   image: Visual Studio 2015
 
@@ -36,6 +39,8 @@
       name: Assembly
     - path: Build\Lib\RangeIt\Release\RangeIt.pdb
       name: AssemblyPDB
+    - path: Build\Lib\RangeIt\Release\RangeIt.xml
+      name: DocumentationXML
 
 # configuration for all branches starting from "dev-"
 # build in Debug mode
@@ -76,6 +81,8 @@
       name: DebugAssembly
     - path: Build\Lib\RangeIt\Debug\RangeIt.pdb
       name: DebugAssemblyPDB
+    - path: Build\Lib\RangeIt\Debug\RangeIt.xml
+      name: DocumentationXML
 
 # "fall back" configuration for all other branches
 # no "branches" section defined
@@ -112,3 +119,5 @@
       name: DebugAssembly
     - path: Build\Lib\RangeIt\Debug\RangeIt.pdb
       name: DebugAssemblyPDB
+    - path: Build\Lib\RangeIt\Debug\RangeIt.xml
+      name: DocumentationXML
